@@ -49,6 +49,13 @@ use_correct_aspect_ratio = true
 ; Note: You need to compile with SDL 2.0.5 or newer for this.
 use_integer_scaling = false
 
+; Scaling method.
+; Possible values:
+; * sharp = Use nearest-neighbor resampling.
+; * fuzzy = First scale to double size with nearest-neighbor scaling, then scale to full screen with smooth scaling.
+; * blurry = Use smooth scaling.
+scaling_type = fuzzy
+
 ; If using a controller with a rumble motor, provide haptic feedback when the kid is hurt.
 enable_controller_rumble = true
 
