@@ -675,6 +675,7 @@ extern byte fix_guard_following_through_closed_gates INIT(= 1);
 extern byte fix_safe_landing_on_spikes INIT(= 1);
 extern byte use_correct_aspect_ratio INIT(= 0);
 extern byte use_integer_scaling INIT(= 0);
+extern byte scaling_type INIT(= 0);
 extern byte enable_remember_guard_hp INIT(= 1);
 extern byte fix_glide_through_wall INIT(= 1);
 extern byte fix_drop_through_tapestry INIT(= 1);
